cleanup ol-print-layout-control.ts add propoerty test use jsdom instead if happy-dom for server side unit tests

--- a/vite-dev/index.html
+++ b/vite-dev/index.html
@@ -7,8 +7,14 @@
 </head>
 <body>
 <h1>ol PrintLayout Control</h1>
-<div id="map" style="width: 50vw; height: 50vh; resize: both"></div>
-<div id="form-controls">Here comes the Form</div>
+<p>Fixed width and height</p>
+<div id="map" style="width: 600px; height: 400px;"></div>
+
+<p>getProperties():</p>
+<pre id="currentProperties"></pre>
+<div id="form-controls">
+
+</div>
 <script type="module" src="main.ts"></script>
 </body>
 </html>
