update example and improve README.md

--- a/examples/index.html
+++ b/examples/index.html
@@ -29,7 +29,7 @@
                         <label>Paper format</label>
                         <div class="formInput">
                             <select id="format"></select>
-                            <span class="code-snip">.paperFormat = {'A4' | 'A3' | ... | 'A0' | ...}</span>
+                            <span class="code-snip">.setFormat( 'A4' | 'A3' | ... | 'A0' | ... )</span>
                         </div>
                     </div>
 
